--- a/requirements.txt
+++ b/requirements.txt
@@ -1,148 +1,80 @@
-Kvsqlite==0.2.1
-Pyrogram==2.0.106
-aiohttp==3.9.1
-aiohttp-socks==0.8.4
+openai==0.28.0
+Faker==24.4.0
+about-time==4.2.1
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
 aiosignal==1.3.1
-arabic-reshaper==3.0.0
-async-timeout==4.0.3
+alive-progress==3.1.5
+asyncio==3.4.3
 attrs==23.2.0
-autopep8==2.0.4
 beautifulsoup4==4.12.3
-bs4==0.0.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
-colorama==0.4.6
-frozenlist==1.4.1
-getmac==0.9.4
-idna==3.6
-markdown-it-py==3.0.0
-mdurl==0.1.2
-multidict==6.0.4
-N4Tools==1.7.1
-names==0.3.0
-pillow==10.2.0
-pyarmor==8.4.7
-pyarmor.cli.core==5.4.3
-pycodestyle==2.11.1
-pyfiglet==1.0.2
-Pygments==2.17.2
-pyTelegramBotAPI==4.12.0
-python-bidi==0.4.2
-python-cfonts==1.5.2
-python-nmap==0.7.1
-python-socks==2.4.4
-requests==2.31.0
-rich==13.7.0
-six==1.16.0
-soupsieve==2.5
-telebot==0.0.5
-tqdm==4.66.1
-urllib3==2.1.0
-user_agent==0.1.10
-uuid==1.30
-yarl==1.9.4
-requests==2.31.0
-bs4==0.0.1
-colorama==0.4.6
-pyTelegramBotAPI==4.7.0
-user-agent==0.1.10
-Telethon==1.29.3
-termcolor==2.3.0
-pytz==2023.3.post1
-DateTime==5.2
-Flask==3.0.0
-Flask-Cors==4.0.0
-gunicorn==21.2.0
-httpx==0.26.0
-Kvsqlite==0.2.1
-Pyrogram==2.0.106
-aiohttp==3.9.1
-aiohttp-socks==0.8.4
-aiosignal==1.3.1
-arabic-reshaper==3.0.0
-async-timeout==4.0.3
-attrs==23.2.0
-autopep8==2.0.4
-beautifulsoup4==4.12.3
-certifi==2023.11.17
-charset-normalizer==3.3.2
-colorama==0.4.6
-frozenlist==1.4.1
-getmac==0.9.4
-idna==3.6
-markdown-it-py==3.0.0
-mdurl==0.1.2
-multidict==6.0.4
-N4Tools==1.7.1
-names==0.3.0
-pillow==10.2.0
-pyarmor==8.4.7
-pyarmor.cli.core==5.4.3
-pycodestyle==2.11.1
-pyfiglet==1.0.2
-Pygments==2.17.2
-python-bidi==0.4.2
-python-cfonts==1.5.2
-python-nmap==0.7.1
-python-socks==2.4.4
-requests==2.31.0
-rich==13.7.0
-six==1.16.0
-soupsieve==2.5
-telebot==0.0.5
-tqdm==4.66.1
-urllib3==2.1.0
-user_agent==0.1.10
-uuid==1.30
-yarl==1.9.4
-aiohttp-socks==0.8.4
-aiosignal==1.3.1
-arabic-reshaper
-async-timeout
-autopep8==2.0.4
-beautifulsoup4==4.12.3
-N4Tools==1.7.1
-names==0.3.0
-python-nmap==0.7.1
-python-socks==2.4.4
-requests==2.31.0
-rich==13.7.0
-six==1.16.0
-soupsieve==2.5
-telebot==0.0.5
-tqdm==4.66.1
-urllib3==2.1.0
-uuid==1.30
+blessed==1.20.0
 blinker==1.7.0
-cairocffi==1.6.1
-console==0.9907
-hstspreload==2024.2.1
+bs4==0.0.1
+certifi==2023.11.17
+chardet==3.0.4
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+fake-useragent==0.1.11
+Flask==3.0.2
+frozenlist==1.4.1
+future==0.18.3
+futures==3.0.5
+google==3.0.0
+googlesearch-python==1.2.3
+grapheme==0.6.0
 html5lib==1.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
-instaloader==4.10.3
-Naked==0.1.32
-pyTelegramBotAPI==4.14.1
-python-dateutil==2.8.2
-pytube==15.0.0
-pytz==2023.3.post1
-pywifi==1.1.12
-requests-toolbelt==1.0.0
-scikit-build==0.12.0
-shellescape==3.8.1
+huepy==1.2.1
+idna==2.8
+inquirer==3.1.4
+itsdangerous==2.1.2
+Jinja2==3.1.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
+mdurl==0.1.2
+mechanize==0.4.9
+multidict==6.0.5
+names==0.3.0
+phonenumbers==8.13.29
+pillow==10.2.0
+pyaes==1.6.1
+pyasn1==0.5.1
+pycryptodome==3.19.0
+pyfiglet==1.0.2
+Pygments==2.17.2
+PyJWT==2.8.0
+Pyrogram==2.0.106
+PySocks==1.7.1
+pystyle==2.9
+pyTelegramBotAPI==4.15.2
+python-cfonts==1.5.2
+python-editor==1.0.4
+python-nmap==0.7.1
+python-whois==0.8.0
+PyYAML==6.0.1
+readchar==4.0.5
+render==1.0.0
+requests==2.25.1
+rich==13.7.0
+rsa==4.9
+selenium==3.141.0
+six==1.16.0
 socks==0
-spark-parser==1.8.9
+soupsieve==2.5
 stdiomask==0.0.6
-telegram==0.0.1
+telebot==0.0.5
 Telethon==1.33.1
-utils==1.0.2
+termcolor==2.4.0
+terminal-banner==0.2.0
+theHarvester==0.0.1
+tqdm==4.66.1
+ttkbootstrap==1.10.1
+twilio==8.12.0
+urllib3==1.26.18
+user_agent==0.1.10
+wcwidth==0.2.12
 webencodings==0.5.1
-websocket==0.2.1
-websocket-client==1.7.0
-user-agent==0.1.10
-pycountry==24.6.1
-instaloader==4.13
-phonenumbers==8.13.43
+Werkzeug==3.0.1
+yarl==1.9.4
+psutil==5.9.4
